Spalten der Testpersonen zugeordnet

--- a/Q-Phase/Validierung.tex
+++ b/Q-Phase/Validierung.tex
@@ -723,7 +723,7 @@ Bei $P_5$ hat das Einstellen des Trainingsplans selbstständig funktioniert, bei
 \subsection{Statistik der RealLifeTests}
 \begin{tabular}{ | l | c | c | c | c | c | c |}
 	\hline
-	\textbf{Übung} & \textbf{Anzahl} & $P_1$ & $P_2$ & $P_3$ & $P_4$ & $P_5$\\
+	\textbf{Übung} & \textbf{Anzahl} & $P_1(Jan)$ & $P_2(Erwin)$ & $P_3(David)$ & $P_4(Benni)$ & $P_5$\\
 	\hline
 	Liegestützen & 10 & ? & ? & ? & ? & 10 \\
 	\hline
