--- a/Q-Phase/Validierung.tex
+++ b/Q-Phase/Validierung.tex
@@ -704,34 +704,39 @@ An die Tespersonen wurden folgende Hinweise gegeben:
 \subsection{Zählmodus}
 \subsubsection{10 Liegestützen}
 %hier Kommentare zu euren Testpersonen ergänzen
+Bei $P_4$ wurden alle Liegestütze beim ersten Mal erkannt.
 Bei $P_5$ wurde die zweite Liegestütze nicht erkannt, die siebte dafür doppelt.
 \subsubsection{10 SitUps}
 %hier Kommentare zu euren Testpersonen ergänzen
+Bei $P_4$ gab es Probleme mit der korrekten Ausführung, weshalb mehr gemacht wurden mussten, sodass alle erkannt werden.
 Bei $P_5$ musste die Übung wiederholt werden, da bei erstem Durchlauf die Verbindung zu den Kopfhöhrern abgebrochen ist.
 \subsection{Laufmodus}
 %hier Kommentare zu euren Testpersonen ergänzen
 %bei P5 keine Kommentare
 \subsubsection{30 Schritte am Stück}
 %hier Kommentare zu euren Testpersonen ergänzen
+Bei $P_4$ wurde korrekt gemessen. 
 $P_5$ ist direkt nach Starten der Aktivität losgelaufen, trotzdem war das Ergebnis korrekt.
 \subsubsection{20 Schritte, dann stoppen, dann wieder 20 Schritte}
-$P_5$ ist schon während dem Starten losgelaufen, hier wurden drei Schritte unterschlagen; das stehen bleiben wurde korrekt erkannt, beim wieder los laufen wurde wieder ein Schritt unterschlagen.
+Bei $P_4$ wurde korrekt gemessen. Das Stehenbleiben wurde beachtet und erkannt.
+$P_5$ ist schon während dem Starten losgelaufen, hier wurden drei Schritte unterschlagen; das Stehenbleiben wurde korrekt erkannt, beim wieder Loslaufen wurde erneut ein Schritt unterschlagen.
 \subsection{Listen And Perform}
 \subsubsection{8 SitUps, 10 Sekunden Pause, 8 Liegestützen}
 %hier Kommentare zu euren Testpersonen ergänzen
+$P_4$ hat seinen Trainingsplan selbstständig eingestellt und hat die Übungen durchgeführt. Die SitUps wurden nicht richtig erkannt; es waren 4 zu wenig. Diese wurden dann simuliert, um die weiteren Funktionen zu testen.  
 Bei $P_5$ hat das Einstellen des Trainingsplans selbstständig funktioniert, bei der Durchführung wurden drei SitUps unterschlagen. $P_5$ reagierte etwas verwirrt, dass der Trainingsplan diesen Schritt noch nicht vollständig abgearbeitet hatte.
 \subsection{Statistik der RealLifeTests}
 \begin{tabular}{ | l | c | c | c | c | c | c |}
 	\hline
 	\textbf{Übung} & \textbf{Anzahl} & $P_1(Jan)$ & $P_2(Erwin)$ & $P_3(David)$ & $P_4(Benni)$ & $P_5$\\
 	\hline
-	Liegestützen & 10 & ? & ? & ? & ? & 10 \\
+	Liegestützen & 10 & ? & ? & ? & 10 & 10 \\
 	\hline
-	SitUps & 10 & ? & ? & ? & ? & 9 \\
+	SitUps & 10 & ? & ? & ? & 7 & 9 \\
 	\hline
-	Schritte & 30 & ? & ? & ? & ? & 30 \\
+	Schritte & 30 & ? & ? & ? & 30 & 30 \\
 	\hline
-	Schritte (mit stoppen) & 40 & ? & ? & ? & ? & 36 \\
+	Schritte (mit stoppen) & 40 & ? & ? & ? & 40 & 36 \\
 	\hline
 \end{tabular}\\
 \paragraph{Anmerkungen}
