--- a/Q-Phase/Validierung.tex
+++ b/Q-Phase/Validierung.tex
@@ -704,11 +704,13 @@ An die Tespersonen wurden folgende Hinweise gegeben:
 \subsection{Zählmodus}
 \subsubsection{10 Liegestützen}
 %hier Kommentare zu euren Testpersonen ergänzen
+Bei $P_1$ wurden alle Liegestütze beim ersten Mal erkannt.
 Bei $P_2$ wurden die ersten 3 Liegestütze zu schnell durchgeführt weswegen sie nur als eine gezählt wurde. 
 Bei $P_4$ wurden alle Liegestütze beim ersten Mal erkannt.
 Bei $P_5$ wurde die zweite Liegestütze nicht erkannt, die siebte dafür doppelt.
 \subsubsection{10 SitUps}
 %hier Kommentare zu euren Testpersonen ergänzen
+Bei $P_1$ wurden die letzten beiden Sit-ups wegen unzureichender Bewegung in die aufrechte Sitzposition nicht erkannt.
 Bei $P_2$ wurden die Sit-Ups sehr schlecht erkannt, obwohl die Ausführung korrekt war.
 Bei $P_4$ gab es Probleme mit der korrekten Ausführung, weshalb mehr gemacht wurden mussten, sodass alle erkannt werden.
 Bei $P_5$ musste die Übung wiederholt werden, da bei erstem Durchlauf die Verbindung zu den Kopfhöhrern abgebrochen ist.
@@ -717,30 +719,32 @@ Bei $P_5$ musste die Übung wiederholt werden, da bei erstem Durchlauf die Verbi
 %bei P5 keine Kommentare
 \subsubsection{30 Schritte am Stück}
 %hier Kommentare zu euren Testpersonen ergänzen
+Bei $P_1$ wurden die ersten 7 Schritte nicht erkannt, danach jedoch alle Weiteren.
 Nachdem der Laufmodus beendet wurde und das Pop Up erschienen ist, ist die App, bei $P_2$  abgestürzt.
 Bei $P_4$ wurde korrekt gemessen. 
 $P_5$ ist direkt nach Starten der Aktivität losgelaufen, trotzdem war das Ergebnis korrekt.
 \subsubsection{20 Schritte, dann stoppen, dann wieder 20 Schritte}
-Bei $P_4$ wurde korrekt gemessen. Das Stehenbleiben wurde beachtet und erkannt.
+Bei  $P_1$ und $P_4$ wurde korrekt gemessen. Das Stehenbleiben wurde beachtet und erkannt.
 $P_5$ ist schon während dem Starten losgelaufen, hier wurden drei Schritte unterschlagen; das Stehenbleiben wurde korrekt erkannt, beim wieder Loslaufen wurde erneut ein Schritt unterschlagen.
 \subsection{Listen And Perform}
 \subsubsection{8 SitUps, 10 Sekunden Pause, 8 Liegestützen}
 %hier Kommentare zu euren Testpersonen ergänzen
+Bei $P_1$ verlief die Trainingsplanerstellung reibungslos, nur die Ausführung der fünften Liegestütze musste wiederholt werden.
 Die Erstellung des Trainingsplans hat bei $P_2$ ohne Probleme funktioniert. Die Erkennung der Sit-Ups lief überdurchschnittlich schlecht ab. Es wurden von 18 Sit-Ups zwei erkannt. Der Test konnte nur dadurch fortgeführt werden, dass $P_2$ die Earables aus den Ohren genommen hat und die Sit-Up Bewegung simuliert hat, da $P_2$ keine Kordination mehr hatte. Die simulierten Sit-Ups wurden besser erkannt als die richtigen. Bei den Liegestützen hat $P_2$ die ersten 3 Liegestütze zu schnell durchgeführt weswegen sie nur als eine gezählt wurde. 
 $P_4$ hat seinen Trainingsplan selbstständig eingestellt und hat die Übungen durchgeführt. Die SitUps wurden nicht richtig erkannt; es waren 4 zu wenig. Diese wurden dann simuliert, um die weiteren Funktionen zu testen.  
 Bei $P_5$ hat das Einstellen des Trainingsplans selbstständig funktioniert, bei der Durchführung wurden drei SitUps unterschlagen. $P_5$ reagierte etwas verwirrt, dass der Trainingsplan diesen Schritt noch nicht vollständig abgearbeitet hatte.
 \subsection{Statistik der RealLifeTests}
 \begin{tabular}{ | l | c | c | c | c | c | c |}
 	\hline
-	\textbf{Übung} & \textbf{Anzahl} & $P_1(Jan)$ & $P_2$ & $P_3(David)$ & $P_4$ & $P_5$\\
+	\textbf{Übung} & \textbf{Anzahl} & $P_1$ & $P_2$ & $P_3(David)$ & $P_4$ & $P_5$\\
 	\hline
-	Liegestützen & 10 & ? & 8 & ? & 10 & 10 \\
+	Liegestützen & 10 & 10 & 8 & ? & 10 & 10 \\
 	\hline
-	SitUps & 10 & ? & 4 & ? & 7 & 9 \\
+	SitUps & 10 & 8 & 4 & ? & 7 & 9 \\
 	\hline
-	Schritte & 30 & ? &25 &  ? & 30 & 30 \\
+	Schritte & 30 & 23 &25 &  ? & 30 & 30 \\
 	\hline
-	Schritte (mit stoppen) & 40 & ? & 36 & ? & 40 & 36 \\
+	Schritte (mit stoppen) & 40 & 40 & 36 & ? & 40 & 36 \\
 	\hline
 \end{tabular}\\
 \paragraph{Anmerkungen}
