Added values for Usertest

--- a/Q-Phase/Validierung.tex
+++ b/Q-Phase/Validierung.tex
@@ -736,15 +736,15 @@ Bei $P_5$ hat das Einstellen des Trainingsplans selbstständig funktioniert, bei
 \subsection{Statistik der RealLifeTests}
 \begin{tabular}{ | l | c | c | c | c | c | c |}
 	\hline
-	\textbf{Übung} & \textbf{Anzahl} & $P_1$ & $P_2$ & $P_3(David)$ & $P_4$ & $P_5$\\
+	\textbf{Übung} & \textbf{Anzahl} & $P_1$ & $P_2$ & $P_3$ & $P_4$ & $P_5$\\
 	\hline
-	Liegestützen & 10 & 10 & 8 & ? & 10 & 10 \\
+	Liegestützen & 10 & 10 & 8 & 7 & 10 & 10 \\
 	\hline
-	SitUps & 10 & 8 & 4 & ? & 7 & 9 \\
+	SitUps & 10 & 8 & 4 & 3 & 7 & 9 \\
 	\hline
-	Schritte & 30 & 23 &25 &  ? & 30 & 30 \\
+	Schritte & 30 & 23 &25 & 34 & 30 & 30 \\
 	\hline
-	Schritte (mit stoppen) & 40 & 40 & 36 & ? & 40 & 36 \\
+	Schritte (mit stoppen) & 40 & 40 & 36 & 36 & 40 & 36 \\
 	\hline
 \end{tabular}\\
 \paragraph{Anmerkungen}
