--- a/Q-Phase/Validierung.tex
+++ b/Q-Phase/Validierung.tex
@@ -764,7 +764,7 @@ Bei $P_1$ verlief die Trainingsplanerstellung reibungslos, nur die Ausführung d
 Die Erstellung des Trainingsplans hat bei $P_2$ ohne Probleme funktioniert. Die Erkennung der Sit-Ups lief überdurchschnittlich schlecht ab. Es wurden von 18 Sit-Ups zwei erkannt. Der Test konnte nur dadurch fortgeführt werden, dass $P_2$ die Earables aus den Ohren genommen hat und die Sit-Up Bewegung simuliert hat, da $P_2$ keine Kordination mehr hatte. Die simulierten Sit-Ups wurden besser erkannt als die richtigen. Bei den Liegestützen hat $P_2$ die ersten 3 Liegestütze zu schnell durchgeführt weswegen sie nur als eine gezählt wurde.\\
 $P_4$ hat seinen Trainingsplan selbstständig eingestellt und hat die Übungen durchgeführt. Die SitUps wurden nicht richtig erkannt; es waren 4 zu wenig. Diese wurden dann simuliert, um die weiteren Funktionen zu testen.\\
 Bei $P_5$ hat das Einstellen des Trainingsplans selbstständig funktioniert, bei der Durchführung wurden drei SitUps unterschlagen. $P_5$ reagierte etwas verwirrt, dass der Trainingsplan diesen Schritt noch nicht vollständig abgearbeitet hatte.
-\subsection{Statistik der RealLifeTests}
+\subsection{Statistik der Nutzertests}
 \begin{tabular}{ | l | c | c | c | c | c | c |}
 	\hline
 	\textbf{Übung} & \textbf{Anzahl} & $P_1$ & $P_2$ & $P_3$ & $P_4$ & $P_5$\\
@@ -783,12 +783,8 @@ Bei $P_5$ hat das Einstellen des Trainingsplans selbstständig funktioniert, bei
 Da ListenAndPerform immer läuft, bis alle Bewegungen korrekt erkannt wurden, kann hier keine Statistik geliefert werden.
 
 \section{Beschreibung Fehler}
-
+%%david
 \section{Anhang}
-\subsection{Unit Test Reports}
-\subsubsection{Bibliothek}
-\subsubsection{App}
-
 \subsection{Links}
 \subsubsection{Bibliothek}
 NuGet Package: \url{https://www.nuget.org/packages/EarablesBLE}\\
