Bib Test App Test Coverage Bild verbessert

--- a/Q-Phase/Validierung.tex
+++ b/Q-Phase/Validierung.tex
@@ -384,7 +384,7 @@ Die Testszenarien wurden schon vor der Entwicklung festgelegt (in der Definition
 Im Folgenden ist die Testüberdeckung für die xUnit-Tests aufgelistet, das heißt welcher Anteil der Code-Zeilen des Projektes in den Tests durchlaufen wird.
 
 \subsection{Bibliothek}
-Bei dem Extrahieren der Rohdaten aus den Bytes der Earables wird keine Verbindung zu den Earables gebraucht, weswegen wir hierfür auch xUnit Tests schreiben konnten.
+Bei unserer Bibliothek haben wir, mit xUnit-Tests alles getestet, was ohne eine Verbindung  möglich war. Dies beinhaltet die Klassen IMUDataEntry, Gyroscope, Accelerometer und IMUDataExtractor.
 \\ \\ 
 \includegraphics[width=1\textwidth]{./bilder/BibTestCoverage/Testcoverage.PNG}
 
