Test Coverage inkonsistenz gefixt

--- a/Q-Phase/Validierung.tex
+++ b/Q-Phase/Validierung.tex
@@ -739,7 +739,7 @@ An die Tespersonen wurden folgende Hinweise gegeben:
 \subsubsection{10 Liegestützen}
 %hier Kommentare zu euren Testpersonen ergänzen
 Bei $P_1$ wurden alle Liegestütze beim ersten Mal erkannt.\\
-Bei $P_2$ wurden die ersten 3 Liegestütze zu schnell durchgeführt weswegen sie nur als eine gezählt wurde.\\
+Bei $P_2$ wurden die ersten 3 Liegestütze zu schnell durchgeführt weswegen sie nur als eine gezählt wurden.\\
 Bei $P_4$ wurden alle Liegestütze beim ersten Mal erkannt.\\
 Bei $P_5$ wurde die zweite Liegestütze nicht erkannt, die siebte dafür doppelt.\\
 \subsubsection{10 SitUps}
@@ -764,7 +764,7 @@ $P_5$ ist schon während dem Starten losgelaufen, hier wurden drei Schritte unte
 \subsubsection{8 SitUps, 10 Sekunden Pause, 8 Liegestützen}
 %hier Kommentare zu euren Testpersonen ergänzen
 Bei $P_1$ verlief die Trainingsplanerstellung reibungslos, nur die Ausführung der fünften Liegestütze musste wiederholt werden.\\
-Die Erstellung des Trainingsplans hat bei $P_2$ ohne Probleme funktioniert. Die Erkennung der Sit-Ups lief überdurchschnittlich schlecht ab. Es wurden, von 18 Sit-Ups, zwei erkannt. Der Test konnte nur dadurch fortgeführt werden, dass $P_2$ die Earables aus den Ohren genommen hat und die Sit-Up Bewegung simulierte, da $P_2$ keine Koordination mehr hatte. Die simulierten Sit-Ups wurden besser erkannt als die richtigen. Bei den Liegestützen hat $P_2$ die ersten 3 Liegestütze zu schnell durchgeführt weswegen sie nur als eine gezählt wurde.\\
+Die Erstellung des Trainingsplans hat bei $P_2$ ohne Probleme funktioniert. Die Erkennung der Sit-Ups lief überdurchschnittlich schlecht ab. Es wurden, von 18 Sit-Ups, zwei erkannt. Der Test konnte nur dadurch fortgeführt werden, dass $P_2$ die Earables aus den Ohren genommen hat und die Sit-Up Bewegung simulierte, da $P_2$ keine Koordination mehr hatte. Die simulierten Sit-Ups wurden besser erkannt als die richtigen. Bei den Liegestützen hat $P_2$ die ersten 3 Liegestütze zu schnell durchgeführt weswegen sie nur als eine gezählt wurden.\\
 $P_4$ hat seinen Trainingsplan selbstständig eingestellt und hat die Übungen durchgeführt. Die SitUps wurden nicht richtig erkannt; es waren 4 zu wenig. Diese wurden dann simuliert, um die weiteren Funktionen zu testen.\\
 Bei $P_5$ hat das Einstellen des Trainingsplans selbstständig funktioniert, bei der Durchführung wurden drei SitUps unterschlagen. $P_5$ reagierte etwas verwirrt, dass der Trainingsplan diesen Schritt noch nicht vollständig abgearbeitet hatte.
 \subsection{Statistik der Nutzertests}
@@ -785,16 +785,6 @@ Bei $P_5$ hat das Einstellen des Trainingsplans selbstständig funktioniert, bei
 %% @David vielleicht könnte man die Ergebnisse noch irgendwie kürzer zusammenfassen bzw. ein Toleranzniveau festlegen und alle ergebnisfelder dementsprechend grün / gelb / rot markieren
 Da ListenAndPerform immer läuft, bis alle Bewegungen korrekt erkannt wurden, kann hier keine Statistik geliefert werden.
 
-
-\section{Test-Coverage}
-
-\subsection{Bibliothek}
-Bei dem Extrahieren der Rohdaten aus den Bytes der Earables wird keine Verbindung zu den Earables gebraucht, weswegen wir hierfür auch xUnit Tests schreiben konnten.
-\\ \\ 
-\includegraphics[width=1\textwidth]{./bilder/BibTestCoverage/Testcoverage.PNG}
-
-
-\section{Regressionstests}
 
 \section{Beschreibung Fehler}
 %%david
